<resources>
    <string name="app_name">Courses</string>
    <string name="tagline">Learn from anywhere,\nanytime!!!</string>
    <string name="logo">logo</string>
    <string name="hi">Hi, User</string>
    <string name="dashTag">What do you wanna\nlearn today?</string>
    <string name="development">Development</string>
    <string name="designing">Designing</string>
    <string name="ai">AI and ML</string>
    <string name="more_courses">More Courses</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="see_all">see all</string>
    <string name="a1">Advance certificate course\nin Java</string>
    <string name="_2_50">$2.50</string>
    <string name="home">Home</string>
    <string name="paid">Courses</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="ui_ux">UI/UX</string>
    <string name="management">Management</string>
    <string name="ds">Data Science</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="big_data">Big Data</string>
    <string name="databases">Databases</string>
    <string name="live">Live</string>
    <string name="searchLine">Tap the icon and start searching…</string>
    <string name="all_courses">Categories</string>
    <string name="courses">Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="_1_5_hr">1.5 hr</string>
    <string name="username">UserName</string>
    <string name="umail">\tUser Email</string>
    <string name="certificates">Certificates</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="my_certificates">My Certificates</string>
    <string name="certificate_tag">For successfully completing an online course</string>
    <string name="issued_date">issued date</string>
    <string name="no_certificate">No certificates yet!\nEnroll in a course and get the\ncertificate after completing it.</string>
    <string name="details">Details</string>
    <string name="password">Password</string>
    <string name="phone_num">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">UPDATE</string>
    <string name="change_password">Change Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_box_heading">Sure you wanna leave? Well, Goodbye for now! Looking forward to seeing you again soon.</string>
    <string name="del_account">"Are you sure you want to leave? The app won't be the same without you!"</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="feedback_heading">Share your experience with us</string>
    <string name="feedback_hint">Any suggestions or new features you \nwant us to implement in this app</string>
    <string name="app_version">App Version: 1.0</string>
    <string name="search">Search</string>
    <string name="all">All Courses</string>
    <string name="course_name">Course Name</string>
    <string name="notes">Notes</string>
    <string name="videos">Videos</string>
    <string name="quiz">\t\tQuiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_name">Video Name</string>
    <string name="download_file">Download file</string>
    <string name="category_name">Category Name</string>
    <string name="ai_2">Artificial Intelligence</string>
    <string name="pdf_name">PDF name</string>
    <string name="heading">Heading</string>
    <string name="some_random_line">Some tag line regarding this course</string>
    <string name="instructor">Instructor:</string>
    <string name="instructorName">InstructorName</string>
    <string name="enroll">Enroll</string>
    <string name="explore">Explore</string>
    <string name="enroll_below">Level up you skills with other courses here</string>
    <string name="certificate_line">After course completion, you will get the certificate as shown below</string>
    <string name="certificate_line2">After internship completion, you will get the certificate as shown below</string>
    <string name="skills">"Skill's you will learn"</string>
    <string name="about_course">About this Certificate Course</string>
    <string name="about_course2">About this Internship</string>
    <string name="why">Why learn from us?</string>
    <string name="_20000_free_courses">20000+ free\ncourses</string>
    <string name="in_demand_skills_and_tools">In-demand skills\nand tools</string>
    <string name="free_lifetime_access">Free lifetime\naccess</string>
    <string name="share_certificate"><![CDATA[Share your certificate & get noticed]]></string>
    <string name="showcase_your_skills">\tShowcase your skills</string>
    <string name="gain">\tGain a competitive edge</string>
    <string name="stand">\tStand out to recruiters</string>
    <string name="land">\tLand your dream job</string>
    <string name="ai_tag">Learn everything regarding the new AI technologies</string>
    <string name="java">Java</string>
    <string name="java_tag">Learning java basics, syntax, and OOPs concepts</string>
    <string name="question_1">Question 1</string>
    <string name="sub">Submit</string>
    <string name="reset">Reset</string>
    <string name="course_videos">Course Videos</string>
    <string name="quiz2">Quiz</string>
    <string name="claim_your_certificate">Claim your certificate</string>
    <string name="certificate_here">\t\tCertificate here…</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="other_methods">Use other Methods</string>
    <string name="other_method_login">SignIn directly into the app using</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_facebook">\tContinue with Facebook</string>
    <string name="continue_with_google">\tContinue with Google</string>
    <string name="login_with_google">\tLogin with Google</string>
    <string name="login_tag">New to My Courses?</string>
    <string name="already">Already have an account?</string>
    <string name="register_tag">By Continuing, You agree to our <b>Privacy Policy</b> and <b>Terms of use</b>. </string>
    <string name="sign_up_tag">Sign up to find your desired course and enroll in it to learn new skills, get certified in that course for free.</string>
    <string name="try_another_way">Try another way</string>
    <string name="reset_link">Password Reset Email Sent</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_tag">We have sent the code verification to your <b>Mobile Number</b></string>
    <string name="otp_tag_email">"Your Account Security is Our Priority! We've Sent You a <b>Secure Link</b> to Safely Change Your Password and Keep Your Account Protected."</string>
    <string name="otp_tag_mail">We have sent the code verification to your <b>Email</b></string>
    <string name="phn_num">\tPhone Number</string>
    <string name="skip">Skip</string>
    <string name="claim_your_certificate_dialog">Claim your certificate</string>
    <string name="claim_now">Claim Now</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="off">You are currently offline!!\nPlease connect to internet first\nand then come back here.</string>
    <string name="completed_courses">Completed Courses</string>
    <string name="live_sessions">Live Sessions</string>
    <string name="live_tag">date and time for the live session</string>
    <string name="progress">progress</string>
    <string name="quiz_dialog1">Please complete the prerequisite</string>
    <string name="quiz_dialog2">Please complete the following prerequisite to access the quiz:</string>
    <string name="quiz_dialog3">\tHow to complete prerequisite?</string>
    <string name="quiz_dialog4">You can complete the prerequisite by following the below mentioned criterion:\n\t1. Videos: Watch at least 80% </string>
    <string name="_2_quiz">2. Quiz</string>
    <string name="certificate_dialog">You can complete the prerequisite by following the below mentioned criterion:\n\t1. Videos: Watch at least 80%\n\t2. Quiz: Score a minimum of 50% </string>
    <string name="_100">0%</string>
    <string name="live_class_link">Live Class Link</string>
    <string name="password_reset_text">"Don't worry sometimes Apple can forget too, enter your email and we will send you a password reset link."</string>
    <string name="done">Done</string>
    <string name="delete_account">Delete Account?</string>
    <string name="delete">Delete</string>
    <string name="about_us">About Us</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="google_meet">Google Meet must be Pre-installed on your device to access the live classes.</string>
    <string name="other_internships"><u>CheckOut other internship programs</u></string>
    <string name="internship_programs">Internship Programs</string>
    <string name="apply">Apply</string>
    <string name="wait_for_certificate">Wait for some time, your certificate will appear on your certificates section in the Users Account Screen.</string>
    <string name="completed"><u>Completed</u></string>
    <string name="emptyUserCoursesRV">Not Enrolled In Any Courses Yet. Search And Enroll In The Course Of Your Choice First.</string>
    <string name="emptyUserInternshipRV">Not Enrolled In Any Internships Yet. Search And Enroll In The Internship Of Your Choice First.</string>
    <string name="noLiveClassesYet">Currently there are no live classes being held. You should come back another time.</string>
    <string name="payment_success">"Your payment has been processed successfully.\nRedirecting to your course materials."</string>
    <string name="payment_unsuccessful">Oops! Payment unsuccessful.\nWe couldn\'t process your payment at this time.</string>
    <string name="default_web_client_id">866458438792-pfd4h0toupull8734dr06133vbbqpm5r.apps.googleusercontent.com</string>
    <string name="razorPayID">rzp_test_BGHsoPnbJtMJwF</string>
    <string name="about_this_app">About This App</string>
    <string name="about_this_app_text">"Welcome to our e-learning platform, your comprehensive solution for learning and skill development on Android devices. Our app offers a diverse range of courses in areas like designing, coding, mathematics, and more, catering to learners of all levels. Whether you're a student or a professional, you’ll find the right course to enhance your knowledge and career prospects.

Each course includes tutorial videos and detailed notes to ensure a complete learning experience. After finishing all the tutorials, you can test your knowledge with a short quiz. Based on your quiz performance, you’ll receive a personalized certificate of completion, which you can use to demonstrate your skills in professional or academic settings.

Additionally, we provide a dedicated section for live classes, where you can join real-time sessions conducted by expert instructors. These interactive sessions allow you to ask questions, clarify doubts, and engage directly with the instructor and fellow learners.

With its user-friendly design and a variety of features, our app is your go-to platform for learning, growth, and success. Start your journey today, connect with experts, and achieve your goals!"</string>
    <string name="categories">Categories</string>
    <string name="advertisements">Advertisements</string>
    <string name="price">Price:</string>
</resources>