<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CourseCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@color/white"
    android:padding="@dimen/_5sdp"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/imageCourse"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_height="@dimen/_130sdp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/live_class"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/nameCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCourse" />

    <TextView
        android:id="@+id/briefCourse"
        android:paddingHorizontal="@dimen/_3sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a1"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameCourse" />

    <TextView
        android:id="@+id/instructorCourse"
        android:paddingHorizontal="@dimen/_3sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructorName"
        android:layout_marginTop="5dp"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/briefCourse" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorCourse"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/timeCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/_1_5_hr"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:drawableStartCompat="@drawable/time"
            android:drawablePadding="@dimen/_3sdp"/>

        <TextView
            android:id="@+id/priceCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/_2_50"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/completedOrNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/completed"
        android:textColor="@color/white"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold"
        android:visibility="gone"
        android:rotation="-25"
        app:layout_constraintBottom_toBottomOf="@+id/imageCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
