<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CourseCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@drawable/dash_intern_bg"
    android:padding="@dimen/_5sdp"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/imageInternship"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_2"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/completedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/completed"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:visibility="gone"
        android:rotation="-25"
        app:layout_constraintBottom_toBottomOf="@+id/imageInternship"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameInternship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/imageInternship"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/briefInternship"
        android:paddingHorizontal="@dimen/_3sdp"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/a1"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/imageInternship"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageInternship"
        app:layout_constraintTop_toBottomOf="@id/briefInternship">

        <TextView
            android:id="@+id/timeInternship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/_1_5_hr"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:drawableStartCompat="@drawable/time"
            android:drawablePadding="@dimen/_3sdp"/>

        <TextView
            android:id="@+id/priceInternship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/_2_50"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
